--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "webpack": "^4.16.3"
   },
   "devDependencies": {
+    "koa": "^2.5.2",
+    "koa-static": "^5.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
