--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "node ./test/sample"
   },
   "dependencies": {
+    "react-hot-loader": "^4.3.4",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
-    "webpack": "^4.16.3"
+    "webpack": "^4.16.3",
+    "webpack-serve": "^2.0.2"
   },
   "devDependencies": {
     "koa": "^2.5.2",
