--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "test": "node ./test/sample"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "react-hot-loader": "^4.3.4",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
     "webpack": "^4.16.3",
+    "webpack-dev-server": "^3.1.5",
     "webpack-serve": "^2.0.2"
   },
   "devDependencies": {
