--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "mini-css-extract-plugin": "^0.4.1",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
