--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "head.js",
     "bin"
   ],
+  "jest": {
+    "testURL": "http://localhost/"
+  },
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
     "doc": "docute ./docs",
     "clean": "rimraf dist",
-    "test": "node ./test/sample",
+    "demo": "node ./test/sample",
+    "test": "jest",
     "prepublish": "npm run clean && npm run build"
   },
   "dependencies": {
@@ -48,6 +52,7 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "docute": "^3.4.12",
+    "jest": "^23.4.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
