--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "serlina",
-  "version": "0.0.12",
-  "description": "Yet another React SSR framework, but server implementation open",
+  "version": "0.1.0",
+  "description": "A progressive React serverside-rendering framework",
   "main": "dist/index.js",
   "bin": {
     "serlina": "bin/serlina"
@@ -55,5 +55,19 @@
     "jest": "^23.4.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/djyde/serlina.git"
+  },
+  "keywords": [
+    "react",
+    "serverside-rendering"
+  ],
+  "author": "Randy",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/djyde/serlina/issues"
+  },
+  "homepage": "https://serlina.js.org"
 }
