--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "docute": "^3.4.12",
     "jest": "^23.4.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "typescript": "^3.0.1"
   },
   "repository": {
     "type": "git",
