--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test": "npm run build && jest",
     "prepublish": "npm run clean && npm run build"
   },
+  "peerDependencies": {
+    "react": "^16",
+    "react-dom": "^16"
+  },
   "dependencies": {
     "assets-webpack-plugin": "^3.8.4",
     "babel-core": "^6.26.3",
