--- a/package.json
+++ b/package.json
@@ -1,80 +1,16 @@
 {
-  "name": "serlina",
-  "version": "0.1.10",
-  "description": "A progressive React serverside-rendering framework",
-  "main": "dist/index.js",
-  "bin": {
-    "serlina": "bin/serlina"
+  "scripts": {
+    "test": "jest",
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean"
   },
-  "files": [
-    "dist",
-    "head.js",
-    "bin"
-  ],
+  "devDependencies": {
+    "docute": "^3.4.12",
+    "jest": "^23.5.0",
+    "lerna": "^3.0.3"
+  },
   "jest": {
     "testURL": "http://localhost/",
     "testEnvironment": "node"
-  },
-  "scripts": {
-    "start": "tsc --watch",
-    "build": "tsc",
-    "bootstrap": "lerna bootstrap",
-    "doc": "docute ./docs",
-    "clean": "rimraf dist",
-    "demo": "node ./examples/sample",
-    "test": "npm run build && jest",
-    "prepublish": "npm run clean && npm run build"
-  },
-  "peerDependencies": {
-    "react": "^16",
-    "react-dom": "^16"
-  },
-  "dependencies": {
-    "assets-webpack-plugin": "^3.8.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "push-if": "^1.0.1",
-    "react-helmet": "^5.2.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.3",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.4",
-    "webpack-serve": "^2.0.2",
-    "webpackbar": "^2.6.1",
-    "write-file-webpack-plugin": "^4.3.2",
-    "yargs": "^12.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^10.5.5",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "docute": "^3.4.12",
-    "jest": "^23.4.2",
-    "lerna": "^3.0.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "typescript": "^3.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djyde/serlina.git"
-  },
-  "keywords": [
-    "react",
-    "serverside-rendering"
-  ],
-  "author": "Randy",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/djyde/serlina/issues"
-  },
-  "homepage": "https://serlina.js.org"
+  }
 }
