--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,9 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: yarn install
+      - run: 
+        - yarn install
+        - npm run bootstrap -- --npmClient yarn
 
       - save_cache:
           paths:
