--- a/examples/sample/package.json
+++ b/examples/sample/package.json
@@ -2,12 +2,13 @@
   "name": "sample",
   "scripts": {
     "test": "node index",
-    "build": "node ../../bin/serlina build . --publicPath http://localhost:1024/"
+    "build": "serlina build . --publicPath http://localhost:1024/"
   },
   "dependencies": {
     "antd": "^3.7.3",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "serlina": "^0.1.10"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
