--- a/packages/serlina-serve/package.json
+++ b/packages/serlina-serve/package.json
@@ -7,9 +7,16 @@
   "dependencies": {
     "koa": "^2",
     "serlina": "^0.1",
-    "react": "^16",
-    "react-dom": "^16",
     "serlina-koa": "^0.1",
-    "supertest": "^3"
+    "yargs": "^12.0.1"
+  },
+  "devDependencies": {
+    "supertest": "^3",
+    "react": "^16",
+    "react-dom": "^16"
+  },
+  "peerDependencies": {
+    "react": "^16",
+    "react-dom": "^16"
   }
 }
