--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -45,6 +45,7 @@
     "webpack-serve": "^2.0.2",
     "webpackbar": "^2.6.1",
     "write-file-webpack-plugin": "^4.3.2",
+    "serialize-javascript": "^1.5.0",
     "yargs": "^12.0.1"
   },
   "devDependencies": {
