serlina-react-router

--- a/packages/serlina-koa/package.json
+++ b/packages/serlina-koa/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "start": "node example"
   },
+  "dependencies": {
+    "path-to-regexp": "^2.2.1"
+  },
   "peerDependencies": {
     "serlina": "^0.1"
   }
