--- a/packages/serlina-react-router/package.json
+++ b/packages/serlina-react-router/package.json
@@ -4,7 +4,8 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "npm run build"
   },
   "dependencies": {
   },
