--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -46,7 +46,8 @@
     "webpackbar": "^2.6.1",
     "write-file-webpack-plugin": "^4.3.2",
     "serialize-javascript": "^1.5.0",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@types/node": "^10.5.5",
