--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "assets-webpack-plugin": "^3.8.4",
+    "react-hot-loader": "^4.3.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-regenerator": "^6.26.0",
