--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16"
   },
   "dependencies": {
+    "glob": "^7.1.3",
     "assets-webpack-plugin": "^3.8.4",
     "react-hot-loader": "^4.3.5",
     "babel-core": "^6.26.3",
