--- a/packages/serlina-serve/package.json
+++ b/packages/serlina-serve/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "koa": "^2",
     "serlina": "^0",
+    "glob": "^7.1.3",
     "serlina-koa": "^0",
     "yargs": "^12.0.1"
   },
