--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -27,14 +27,13 @@
   "dependencies": {
     "glob": "^7.1.3",
     "assets-webpack-plugin": "^3.8.4",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
     "react-hot-loader": "^4.3.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6",
-    "babel-preset-stage-2": "^6",
-    "babel-preset-react": "^6.24.1",
+    "@babel/preset-react": "^7",
+    "babel-loader": "^8",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "css-loader": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "mini-css-extract-plugin": "^0.4.1",
