--- a/examples/sample/tsconfig.json
+++ b/examples/sample/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "target": "es6"
   }
 }
