--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7",
     "babel-loader": "^8",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "ts-loader": "^5.3.0",
     "css-loader": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "mini-css-extract-plugin": "^0.4.1",
