--- a/packages/serlina/package.json
+++ b/packages/serlina/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serlina",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A progressive React serverside-rendering framework",
   "main": "dist/index.js",
   "bin": {
@@ -9,7 +9,8 @@
   "files": [
     "dist",
     "head.js",
-    "bin"
+    "bin",
+    "babel.config.js"
   ],
   "scripts": {
     "start": "tsc --watch",
